[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
reqwest ="0.12.15"
config = "0.13"
actix-web = "4"
tokio = {version ="1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1", features = ["derive"]}

[dependencies.sqlx]
version = "0.7"
default-features =  false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]