[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
reqwest ="0.12.15"
config = "0.13"
actix-web = "4"
tokio = {version ="1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1", features = ["derive"]}
uuid = {version="1", features= ["v4"]}
chrono = {version="0.4.22", default-features = false, features = ["clock"]}
tracing-subscriber = {version="0.3", features = ["registry", "env-filter"]}
tracing = {version="0.1", features = ["log"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = {version = "0.8", features = ["serde"]}
tracing-actix-web = "0.7"
[dependencies.sqlx]
version = "0.7"
default-features =  false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1"