[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13"
urlencoding= "2"
hmac = {version = "0.12", features=["std"]}
sha2 = "0.10"
htmlescape="0.3"
actix-web = "4"
tokio = {version ="1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1", features = ["derive"]}
uuid = {version="1", features= ["v4"]}
chrono = {version="0.4.22", default-features = false, features = ["clock"]}
tracing-subscriber = {version="0.3", features = ["registry", "env-filter"]}
tracing = {version="0.1", features = ["log"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = {version = "0.8", features = ["serde"]}
tracing-actix-web = "0.7"
serde-aux = "4"
unicode-segmentation="1"
claims="0.7"
validator="0.16"
fake="~2.3"
quickcheck="0.9.2"
quickcheck_macros="0.9.1"
serde_json = "1"
rand = {version="0.8", features=["std_rng"]}
thiserror="1"
anyhow = "1"
base64="0.21"
sha3="0.9"
argon2={version="0.4", features=["std"]}
[dependencies.sqlx]
version = "0.7"
default-features =  false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1"
tokio = {version = "1", features= ["rt","macros"]}
linkify="0.9"
wiremock="0.5"
[dependencies.reqwest]
version="0.11"
default-features=false
features = ["json", "rustls-tls"]